src/snapshots/templates__error__test__error_unknown_keyword.snap
---
source: src/error.rs
assertion_line: 200
expression: "Hello {% wrong %}"

---
Unexpected identifier: wrong

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% wrong %}
  │          ^^^^^


